--- a/frontend/src/app/login/login.page.html
+++ b/frontend/src/app/login/login.page.html
@@ -1,5 +1,8 @@
 <ion-header>
-
+  <!-- Icono para configurar la IP -->
+  <ion-button fill="clear" slot="end" (click)="configureServerUrl()" class="config-ip-button">
+    <ion-icon name="settings-outline"></ion-icon>
+  </ion-button>
 </ion-header>
 
 <ion-content class="ion-padding">
@@ -42,14 +45,6 @@
         <p>¿No tienes una cuenta?</p>
         <a href="/register">Regístrate</a>
       </div>
-      <!-- Descarga de la app -->
-      <!-- <div class="app-download">
-        <p>Consigue la aplicación.</p>
-        <div class="store-buttons">
-          <img src="assets/apple-button.png" alt="Descargar en App Store" />
-          <img src="assets/googleplay-button.png" alt="Descargar en Google Play" />
-        </div>
-      </div> -->
     </section>
   </main>
 </ion-content>
