--- a/frontend/src/app/home/home.page.html
+++ b/frontend/src/app/home/home.page.html
@@ -1,4 +1,27 @@
+<ion-header>
+  <ion-toolbar>
+    <img class="img-insta" src="assets/instagram-logo.png" alt="Instagram" />
+
+    <ion-buttons slot="end">
+      <ion-button>
+        <ion-icon slot="icon-only" name="send-outline"></ion-icon>
+      </ion-button>
+    </ion-buttons>
+  </ion-toolbar>
+</ion-header>
 <ion-content>
+  <!-- Historias -->
+  <div class="story-list">
+    <div class="scroll-horizontal">
+      <div class="scroll-item" *ngFor="let story of stories">
+        <ion-avatar class="avatar-md">
+          <img [src]="story.avatar" [alt]="story.username">
+        </ion-avatar>
+        <div class="item-label">{{ story.username }}</div>
+      </div>
+    </div>
+  </div>
+  
   <!-- Publicaciones -->
   <div class="post-list">
     <div class="post-item" *ngFor="let post of posts">
